Updated Dependencies and Added Test Libraries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
-    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services' // Google Services plugin
     id 'dagger.hilt.android.plugin'
     id 'com.google.firebase.crashlytics'
     id 'com.google.firebase.firebase-perf'
@@ -70,42 +70,43 @@ android {
     }
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.42'
-    kapt 'com.google.dagger:hilt-compiler:2.42'
-
-    // Architectural Components
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-
-    // Activity KTX for viewModels()
-    implementation 'androidx.activity:activity-ktx:1.4.0'
-
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-
-    // Coroutines Support for Firebase
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
-
-    // Preferences DataStore
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
+    // Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
+
+    // Activity KTX for Injecting ViewModels into Fragments
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+
+    // Architectural Components
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
+
+    // Coroutines Support for Firebase
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.2'
+
+    // Preferences DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
     // Firebase BoM and Analytics
-    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Firebase App Check
@@ -125,24 +126,44 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // Lottie Library
-    implementation 'com.airbnb.android:lottie:5.0.3'
+    implementation 'com.airbnb.android:lottie:5.2.0'
 
     // Coil Library
-    implementation 'io.coil-kt:coil:2.0.0'
-    implementation 'io.coil-kt:coil-svg:2.0.0'
+    implementation 'io.coil-kt:coil:2.1.0'
+    implementation 'io.coil-kt:coil-svg:2.1.0'
 
     // AppLovin Libraries
-    implementation 'com.applovin:applovin-sdk:11.4.0'
+    implementation 'com.applovin:applovin-sdk:11.4.2'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'com.applovin.mediation:adcolony-adapter:4.7.1.1'
-    implementation 'com.applovin.mediation:google-adapter:20.6.0.11'
+    implementation 'com.applovin.mediation:google-adapter:21.0.0.0'
 
     // Google AdMob Library
-    implementation 'com.google.android.gms:play-services-ads:20.6.0'
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
 
     // AdColony Libraries
     implementation 'com.adcolony:sdk:4.7.1'
 
     // Tapsell Library
     implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.1.7'
+
+    // Local Unit Test Libraries
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
+
+    // Instrumentation Test Libraries
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.4.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.42'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.42'
+    debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
 }
