--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
@@ -6,16 +5,14 @@ buildscript {
         maven { url 'https://artifacts.applovin.com/android' } // Applovin Ad Review Repo
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2'
-        classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        classpath 'com.google.gms:google-services:4.3.10' // Google Services plugin
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
         classpath 'com.google.firebase:perf-plugin:1.4.1'
         classpath 'com.applovin.quality:AppLovinQualityServiceGradlePlugin:4.3.7'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
