--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,6 +164,7 @@ dependencies {
     androidTestImplementation 'androidx.navigation:navigation-testing:2.4.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.42'
     kaptAndroidTest 'com.google.dagger:hilt-compiler:2.42'
     debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
