--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ applovin {
 }
 
 android {
-    compileSdk 32 // TODO CHANGE TO 33 BEFORE RELEASE
+    compileSdk 33
     buildToolsVersion '33.0.0'
 
     defaultConfig {
@@ -82,19 +82,19 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
 
     // Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
 
     // Activity KTX for Injecting ViewModels into Fragments
-    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.5.0'
 
     // Architectural Components
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3'
@@ -161,11 +161,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
-    androidTestImplementation 'androidx.navigation:navigation-testing:2.4.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0' // TODO UPGRADE TO 3.5.0 AND NOT 3.4.0
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.5.0'
+    // TODO UPGRADE ESPRESSO TO 3.5.0 AND NOT 3.4.0
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.42'
     kaptAndroidTest 'com.google.dagger:hilt-compiler:2.42'
-    debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.0'
 }
