Improved Debug Build Variant

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            ext.enableCrashlytics = false
+            ext.alwaysUpdateBuildId = false
+        }
+
         release {
             shrinkResources true
             minifyEnabled true
