--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ applovin {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32 // TODO UPGRADE TO 33 FOR RELEASE
     buildToolsVersion '33.0.0'
 
     defaultConfig {
@@ -102,11 +102,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Coroutines Support for Firebase
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     // Preferences DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
@@ -142,7 +142,7 @@ dependencies {
     implementation 'com.applovin:applovin-sdk:11.4.4'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'com.applovin.mediation:adcolony-adapter:4.8.0.0'
-    implementation 'com.applovin.mediation:google-adapter:21.0.0.0'
+    implementation 'com.applovin.mediation:google-adapter:21.1.0.0'
 
     // Google AdMob Library
     implementation 'com.google.android.gms:play-services-ads:21.1.0'
@@ -157,7 +157,7 @@ dependencies {
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 
     // Instrumentation Test Libraries
     androidTestImplementation 'com.google.truth:truth:1.1.3'
@@ -165,7 +165,7 @@ dependencies {
     androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.5.0'
     // TODO UPGRADE ESPRESSO TO 3.5.0 AND NOT 3.4.0
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
