--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.xeniac.warrantyroster_manager"
         minSdkVersion 21
         targetSdk 33
-        versionCode 15 // TODO UPGRADE
-        versionName "1.5.0" // TODO UPGRADE
+        versionCode 16 // TODO UPGRADE FOR RELEASE
+        versionName "1.5.1" // TODO UPGRADE FOR RELEASE
 
         buildConfigField("String", "APPLOVIN_API_KEY", APPLOVIN_API_KEY)
         buildConfigField("String", "APPLOVIN_INTERSTITIAL_UNIT_ID", APPLOVIN_INTERSTITIAL_UNIT_ID)
