--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://artifacts.applovin.com/android' } // Applovin Ad Review Repo
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2'
-        classpath 'com.google.gms:google-services:4.3.14' // Google Services plugin
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
-        classpath 'com.google.firebase:perf-plugin:1.4.1'
         classpath 'com.applovin.quality:AppLovinQualityServiceGradlePlugin:4.3.7'
     }
+}
+
+plugins {
+    id 'com.android.application' version '7.3.1' apply false // Android Gradle Plugin Version
+    id 'com.android.library' version '7.3.1' apply false // Android Gradle Plugin Version
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'com.google.gms.google-services' version '4.3.14' apply false // Google Services plugin
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.1' apply false
+    id 'com.google.firebase.firebase-perf' version '1.4.2' apply false
 }
 
 task clean(type: Delete) {
