Change the Launch Activity to MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,10 @@
         tools:targetApi="tiramisu">
 
         <activity
-            android:name=".ui.landing.LandingActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.WarrantyRoster.Splash">
+            android:theme="@style/Theme.WarrantyRoster.Splash"
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,9 +33,8 @@
         </activity>
 
         <activity
-            android:name=".ui.main.MainActivity"
-            android:theme="@style/Theme.WarrantyRoster"
-            android:windowSoftInputMode="adjustPan|stateHidden" />
+            android:name=".ui.landing.LandingActivity"
+            android:theme="@style/Theme.WarrantyRoster.Landing" />
 
         <service
             android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
