--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="tiramisu">
 
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.WarrantyRoster.Splash"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-            android:name=".ui.landing.LandingActivity"
+            android:name=".ui.LandingActivity"
             android:theme="@style/Theme.WarrantyRoster.Landing" />
 
         <service
